Fix z-index issues on tags and flyout menu

--- a/app/elements/card-actions/card-actions.scss
+++ b/app/elements/card-actions/card-actions.scss
@@ -1,19 +1,24 @@
 :host {
   display: inline-block;
   float: right;
+  z-index: 2;
+  position: relative;
 }
 
 .caret {
   width: 25px;
+  display: inline-block;
 }
 
 .card-actions-list {
-  position: relative;
-  top: .5em;
+  position: absolute;
+  top: 10%;
+  right: 0;
   list-style: none;
   padding-left: 0;
   display: none;
   border: 1px solid #ddd;
+  background: white;
 
   &.is-visible {
     display: block;
