--- a/app/elements/card-container/card-container.scss
+++ b/app/elements/card-container/card-container.scss
@@ -4,4 +4,5 @@
   border-radius: 4px;
   padding: 5px;
   width: 450px;
+  position: relative;
 }
